--- a/web/core/templates/mqtt.html
+++ b/web/core/templates/mqtt.html
@@ -33,8 +33,8 @@
         </div>
         <!-- [ breadcrumb ] end -->
         <!-- [ Main Content ] start -->
-        <div class="col-sm-12">
-            <div class="card">
+        <div class="card">
+            <div class="col-md-12">
                 <div class="card-header">
                     <h5>What is this?</h5>
                     <div class="card-header-right">
@@ -44,21 +44,27 @@
                                 <i class="feather icon-more-horizontal"></i>
                             </button>
                             <ul class="list-unstyled card-option dropdown-menu dropdown-menu-right">
-                                <li class="dropdown-item full-card"><a href="#!"><span><i class="feather icon-maximize"></i>
-                                            maximize</span><span style="display:none"><i class="feather icon-minimize"></i>
+                                <li class="dropdown-item full-card"><a href="#!"><span><i
+                                                class="feather icon-maximize"></i>
+                                            maximize</span><span style="display:none"><i
+                                                class="feather icon-minimize"></i>
                                             Restore</span></a></li>
-                                <li class="dropdown-item minimize-card"><a href="#!"><span><i class="feather icon-minus"></i>
+                                <li class="dropdown-item minimize-card"><a href="#!"><span><i
+                                                class="feather icon-minus"></i>
                                             collapse</span><span style="display:none"><i class="feather icon-plus"></i>
                                             expand</span></a></li>
-                                <li class="dropdown-item close-card"><a href="#!"><i class="feather icon-trash"></i> remove</a>
+                                <li class="dropdown-item close-card"><a href="#!"><i class="feather icon-trash"></i>
+                                        remove</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="card-body">
-                    <p>This is the MQTT Overview Dashboard. On this page, you will find metrics about your devices and the histories of what your devices have been doing. 
-                        You can see how much traffic your devices have been sending, and you can select dates for certain graphs to see data from a specific date.</p>
+                    <p>This is the MQTT Overview Dashboard. On this page, you will find metrics about your devices and
+                        the histories of what your devices have been doing.
+                        You can see how much traffic your devices have been sending, and you can select dates for
+                        certain graphs to see data from a specific date.</p>
                 </div>
             </div>
         </div>
