Add MQTT Blurb and Fix Alerting (#39)

--- a/web/core/templates/mqtt.html
+++ b/web/core/templates/mqtt.html
@@ -33,6 +33,41 @@
         </div>
         <!-- [ breadcrumb ] end -->
         <!-- [ Main Content ] start -->
+        <div class="card">
+            <div class="col-md-12">
+                <div class="card-header">
+                    <h5>What is this?</h5>
+                    <div class="card-header-right">
+                        <div class="btn-group card-option">
+                            <button type="button" class="btn dropdown-toggle btn-icon" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">
+                                <i class="feather icon-more-horizontal"></i>
+                            </button>
+                            <ul class="list-unstyled card-option dropdown-menu dropdown-menu-right">
+                                <li class="dropdown-item full-card"><a href="#!"><span><i
+                                                class="feather icon-maximize"></i>
+                                            maximize</span><span style="display:none"><i
+                                                class="feather icon-minimize"></i>
+                                            Restore</span></a></li>
+                                <li class="dropdown-item minimize-card"><a href="#!"><span><i
+                                                class="feather icon-minus"></i>
+                                            collapse</span><span style="display:none"><i class="feather icon-plus"></i>
+                                            expand</span></a></li>
+                                <li class="dropdown-item close-card"><a href="#!"><i class="feather icon-trash"></i>
+                                        remove</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p>This is the MQTT Overview Dashboard. On this page, you will find metrics about your devices and
+                        the histories of what your devices have been doing.
+                        You can see how much traffic your devices have been sending, and you can select dates for
+                        certain graphs to see data from a specific date.</p>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <!-- [ variant-chart ] start -->
             <div class="col-md-6 col-xl-3">
