--- a/web/core/templates/includes/navigation.html
+++ b/web/core/templates/includes/navigation.html
@@ -2,7 +2,7 @@
 <header class="navbar pcoded-header navbar-expand-lg navbar-light headerpos-fixed header-blue">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse" href="#!"><span></span></a>
-        <a href="#!" class="b-brand">
+        <a href="network" class="b-brand">
             <h4 class="mb-0 f-w-400 text-white">Pi-LINk</h4>
         </a>
         <a href="#!" class="mob-toggler">
